@@ -171,6 +171,7 @@ public enum ACTIONS {
 	WATCHED_ATTACK_IS_BROKEN_KILLED,
 	WATCHED_ATTACK_IS_HEALED,
 
+	ADD_CONSOLE_LINE,
 	CLOSE_SURFACE_MAP,
 	MAP_MOVE_TO_STARSYSTEM,
 	MAP_MOVE_TO_JUMPSHIP;
